--- a/标签.md
+++ b/标签.md
@@ -78,7 +78,24 @@
         <a-curvedimage src="another-image.png"></a-curved-image>
       </a-scene>
 
-<h3></h3>
+<h3>< a-cylinder ></h3>
+
+创建多变形曲面多边形
+
+<!-- Basic cylinder. -->
+<a-cylinder color="crimson" height="3" radius="1.5"></a-cylinder>
+<!-- Hexagon.八边形 -->
+<a-cylinder color="cyan" segments-radial="8"></a-cylinder>
+<!-- Pac-man. -->
+<a-cylinder color="yellow" theta-start="50" theta-length="280" side="double"></a-cylinder>
+<!-- Green pipe. -->
+<a-cylinder color="green" open-ended="true"></a-cylinder>
+
+
+
+
+
+
 <h3></h3>
 <h3></h3>
 <h3></h3>
