--- a/标签.md
+++ b/标签.md
@@ -92,14 +92,35 @@
 <a-cylinder color="green" open-ended="true"></a-cylinder>
 
 
+<h3>< a-dodecahedron ></h3>
+据说是12边形
 
+                <a-dodecahedron color="#FF926B" radius="5"></a-dodecahedron>
+<h3>< a-image ></h3>
 
+显示一张图片
 
-
+        <a-scene>
+          <a-assets>
+            <img id="my-image" src="image.png">
+          </a-assets>
+          <!-- Using the asset management system. -->
+          <a-image src="#my-image"></a-image>
+          <!-- Defining the URL inline. Not recommended but more comfortable for web developers. -->
+          <a-image src="another-image.png"></a-image>
+        </a-scene>
 <h3></h3>
 <h3></h3>
 <h3></h3>
 <h3></h3>
+<h3></h3>
+<h3></h3>
+<h3></h3>
+<h3></h3>
+<h3></h3>
+<h3></h3>
+<h3></h3>
+<h3></h3><h3></h3>
 
 
 
