--- a/标签.md
+++ b/标签.md
@@ -109,18 +109,94 @@
           <!-- Defining the URL inline. Not recommended but more comfortable for web developers. -->
           <a-image src="another-image.png"></a-image>
         </a-scene>
-<h3></h3>
-<h3></h3>
-<h3></h3>
-<h3></h3>
-<h3></h3>
-<h3></h3>
-<h3></h3>
-<h3></h3>
-<h3></h3>
-<h3></h3>
-<h3></h3>
-<h3></h3><h3></h3>
+<h3>< a-light ></h3>
+设置一个光源
+
+        <!-- Red directional light shining from the top left. -->
+        <a-light color="red" position="-1 1 0"></a-light>
+        <!-- Blue point light, 5 meters in the air. -->
+        <a-light type="point" color="blue" position="0 5 0"></a-light>
+        <!-- Dim ambient lighting. -->
+        <a-light type="ambient" color="#222"></a-light>
+
+<h3>< a-obj-model ></h3>
+可以显示从外部引入的obj 和mtl 对象
+
+        <a-scene>
+          <a-assets>
+            <a-asset-item id="crate-obj" src="crate.obj"></a-asset-item>
+            <a-asset-item id="crate-mtl" src="crate.mtl"></a-asset-item>
+          </a-assets>
+          <!-- Using the asset management system. -->
+          <a-obj-model src="#crate-obj" mtl="#crate-mtl"></a-obj-model>
+          <!-- Defining the URL inline. Not recommended but may be more comfortable. -->
+          <a-obj-model src="crate.obj" mtl="crate.mtl"></a-obj-model>
+        </a-scene>
+
+<h3><a-octahedron></h3>
+八面体
+
+<a-octahedron color="#FF926B" radius="5"></a-octahedron>
+<h3>< a-plane ></h3>
+创建一个平面
+
+<a-plane src="imgs/2.jpg" height="10" width="10" rotation="-90 0 0"></a-plane>
+
+<h3>< a-ring ></h3>
+画一个圆环
+         <a-ring src="imgs/1.jpg" radius-inner="0.5" radius-outer="1" position="0 1 0" rotation="-90 0 0"></a-ring>
+<h3>< a-sky ></h3>
+画一个背景
+        
+        <a-scene>
+          <a-assets>
+            <img id="sky" src="sky.png">
+          </a-assets>
+          <a-sky src="#sky"></a-sky>
+        </a-scene>
+<h3><a-sound></h3>
+播放音频文件
+
+	<a-scene>
+		<a-sound src="src: url(click.mp3)" autoplay="true" position="0 2 5"></a-sound>
+	</a-scene>
+<h3>< a-sphere ></h3>
+画一个球
+
+        <a-sphere color="yellow" radius="1"></a-sphere>
+<h3>< a-tetrahedron ></h3>
+画一个四面体
+        <a-tetrahedron color="#FF926B" radius="1" position="0 0 -2"></a-tetrahedron>
+<h3>< a-torus-knot ></h3>
+画一朵菊花,,ԾㅂԾ,,
+
+		<a-torus-knot color="#B84A39" arc="180" p="2" q="7" radius="2" radius-tubular="0.1" position="0 0 -3"></a-torus-knot>
+<h3><a-torus></h3>
+画一个跳蛋🤧
+
+<a-torus color="#43A367" arc="270" radius="1" radius-tubular="0.1"></a-torus>
+<h3>< a-video ></h3>
+嵌入一个视频
+
+        <a-scene>
+          <a-assets>
+            <video id="penguin-sledding" autoplay loop="true" src="penguin-sledding.mp4">
+          </a-assets>
+          <!-- Using the asset management system. -->
+          <a-video src="#penguin-sledding" width="16" height="9" position="0 0 -20"></a-video>
+          <!-- Defining the URL inline. Not recommended but more comfortable for web developers. -->
+          <a-video src="airbending.mp4"></a-video>
+        </a-scene>
+<h3>< a-videosphere ></h3>
+播放VR视频！！！！
+
+	<a-scene>
+		  <a-assets>
+		    <video id="antarctica" autoplay loop="true" src="video/1.mp4">
+		  </a-assets>
+		<a-videosphere src="#antarctica"></a-videosphere>
+	</a-scene>
+
 
 
 
