--- a/组件.md
+++ b/组件.md
@@ -1,35 +1,24 @@
-<h3>Entity-Component-System</h3>
-
-A-frame基于 entity-component-system pattern (ECS),在游戏开发中有一个常见的模式，强调组合性超过继承性
-
-一个实体是一个通用对象，该对象本质上不与呈现什么。
-
-组件是插入实体中的可复用模块，它们为实体提供外观，行为和方法，它们对实体来说是即插即用的
-
-一个实体组件系统提供一个全局范围的服务和管理组件的类。
-
-ECS让我们通过插入不同的可重用组件插入实体插座构建具有丰富的行为复杂的实体。与此不同，传统的继承在那里，如果我们想扩展一个对象，我们将不得不手动创建一个新的类来实现
-
-ECS给了开发者更新的权限，，开发人员可以编写，分享，并且可以对现有的组件扩展新特性或者重写现有属性。
-
-<h4></h4>
+<h3>blend-model</h3>
+我们可以引入一个json格式的three.js模块
 ```html
-
+<a-scene>
+  <a-assets>
+    <a-asset-item id="hand" src="/path/to/hand.json"></a-asset-item>
+  </a-assets>
+  <a-entity blend-model="#hand"></a-entity>
+</a-scene>
 ```
 ```javascript
 
 ```
-<h3></h3>
+<h3>camera</h3>
+相机组件定义从哪个角度查看场景。它经常与控件配合，允许输入设备移动和旋转相机。
+
+
 ```html
-
+<a-entity camera="userHeight: 1.8" look-controls></a-entity>
 ```
-```javascript
-
-```
-<h3></h3>
-```html
-
-```
+非VR模式时。默认用户高度为1.8m，VR模式时默认高度取消，所以切换十分方便
 ```javascript
 
 ```
